# kube

./: .gitignore  .travis.yml  .travis.yml.bak  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
Kube/: CMakeLists.txt
Kube/cmake/: FindLibNoise.cmake
Kube/docs/: .gitignore
Kube/samples/: CMakeLists.txt
Kube/samples/Isometric/: CMakeLists.txt
Kube/samples/Isometric/shaders/: TextShader.fs
Kube/samples/PointLightTest/: CMakeLists.txt
Kube/samples/PointLightTest/fonts/: Consolas.dds
Kube/samples/PointLightTest/shaders/: FragmentShader.fs
Kube/samples/TerrainGeneration/: CMakeLists.txt  sample.h
Kube/samples/TerrainGeneration/noise/: noiseutils.cpp
Kube/samples/TerrainGeneration/shaders/: FragmentShader.fs  TextShader.vs
Kube/source/: KubeEngine.cpp  KubeWindow.cpp  KubeWindow.h
Kube/source/Chunks/: block.h  blocktype.cpp  blocktype.h  chunk.h
Kube/source/Renderer/: camera.h  color.h  material.h  renderer.cpp  renderer.h  text2d.cpp  text2d.h  texture.cpp  texture.h
Kube/source/Utils/: log.cpp  log.h
include/glad/: glad.h
samples/: CMakeLists.txt
samples/Isometric/: CMakeLists.txt  sample.cpp  sample.h
samples/PointLightTest/: CMakeLists.txt  sample.cpp  sample.h
samples/PointLightTest/assets/shaders/: BasicPhong.vs  BasicText.frag
samples/PointLightTest/fonts/: CubeFontFilled.dds
samples/TerrainGeneration/: CMakeLists.txt  sample.cpp  sample.h
samples/TerrainGeneration/assets/shaders/: BasicPhong.frag  BasicPhong.vert  BasicText.vs
samples/TerrainGeneration/fonts/: CubeFont.dds  CubeFontFilledInvert.dds
samples/TerrainGeneration/noise/: noiseutils.cpp  noiseutils.h
samples/TerrainGeneration/shaders/: FragmentShader.fs  VertexShader.vs
samples/VoxLoading/: CMakeLists.txt  sample.cpp  sample.h
samples/VoxLoading/assets/models/: chr_old.vox  chr_rain.vox  doom.vox  nature.vox  pikachu.vox  teapot.vox  torch.vox
samples/VoxLoading/assets/models/anim/: T-Rex.vox
samples/VoxLoading/assets/models/chr/: chr_fox.vox  chr_gumi.vox  chr_man.vox  chr_poem.vox
samples/VoxLoading/assets/shaders/: BasicPhong.frag
src/: KubeEngine.h  glad.c  kubeEngine.cpp  kubeEngine.h  kubeWindow.cpp  kubeWindow.h
src/Chunks/: chunk.cpp  chunkManager.cpp  chunkManager.h
src/Renderer/: light.h  scenemanager.cpp  scenemanager.h  shader.cpp  shader.h
src/chunks/: block.cpp  block.h  blocktype.cpp  blocktype.h  chunk.cpp  chunk.h  chunkManager.cpp  chunkManager.h
src/input/: inputManager.cpp  inputManager.h
src/renderer/: camera.cpp  color.h  light.h  material.h  mesh.h  renderer.cpp  renderer.h  scenemanager.cpp  scenemanager.h  shader.cpp  shader.h  textManager.cpp  textManager.h  texture.cpp  texture.h
src/scene/: camera.cpp  camera.h  light.h  scenemanager.cpp  scenemanager.h  voxelModel.cpp  voxelModel.h
src/utils/: color.h  log.cpp  log.h  voxLoader.cpp  voxLoader.h
